syntax = "proto3";

message SubscribeGrpcRequest{
  string SubscriberId = 1;
  string NameOfProfileSubscribedTo = 2;
}

message SubscribeGrpcResponse{
  int32 httpStatusCode = 1;
}

message UnsubscribeGrpcRequest{
  string SubscriberId = 1;
  string NameOfProfileUnsubscribedTo = 2;

}

message UnsubscribeGrpcResponse{
  int32 httpStatusCode = 1;
}

service ProfileMicroservice{
  rpc Subscribe (SubscribeGrpcRequest) returns (SubscribeGrpcResponse);
  rpc Unsubscribe (UnsubscribeGrpcRequest) returns (UnsubscribeGrpcResponse);
}